Bug 1947159 - fix(webgpu): allow sequences for `GPUOrigin2D` r=webgpu-reviewers,teoxoy

As this is only used in the `source.origin` field for
`GPUQueue.copyExternalImageToTexture`, we can keep this validation in
the body of this method, for now.

Differential Revision: https://phabricator.services.mozilla.com/D255663